// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularProgress in RTL renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-10 h-10 [&_.background]:stroke-cell"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-10 h-10 [&_.background]:stroke-whis [&_.progress]:stroke-dodoria"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-10 h-10 [&_.progress]:stroke-roshi"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10 [&_.background]:stroke-cell"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10 [&_.background]:stroke-whis [&_.progress]:stroke-dodoria"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10 [&_.progress]:stroke-roshi"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="w-10 h-10"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress in RTL renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-4 h-4"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-6 h-6"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-8 h-8"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-10 h-10"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-12 h-12"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-4 h-4"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-6 h-6"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-8 h-8"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-12 h-12"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress in RTL renders Values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="25"
          class="w-10 h-10"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="w-10 h-10"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-10 h-10"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
          />
        </svg>
        <svg
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="w-10 h-10"
          role="progressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="background stroke-[0.5rem] stroke-trunks/[.24]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
          <path
            class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
            d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
            stroke-linecap="round"
            style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10 [&_.background]:stroke-cell"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10 [&_.background]:stroke-whis [&_.progress]:stroke-dodoria"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10 [&_.progress]:stroke-roshi"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-10 h-10 [&_.background]:stroke-cell"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-10 h-10 [&_.background]:stroke-whis [&_.progress]:stroke-dodoria"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-10 h-10 [&_.progress]:stroke-roshi"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="w-10 h-10"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-4 h-4"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-6 h-6"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-8 h-8"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-12 h-12"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-4 h-4"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-6 h-6"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-8 h-8"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-10 h-10"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-12 h-12"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CircularProgress renders Values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
        />
      </svg>
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="w-10 h-10"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="background stroke-[0.5rem] stroke-trunks/[.24]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
        <path
          class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          stroke-linecap="round"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
        />
      </svg>
    </div>
  </body>,
  "container": <div>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="w-10 h-10"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 216.76989309769573px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-10 h-10"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 144.51326206513048px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-10 h-10"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 72.25663103256524px; fill-opacity: 0;"
      />
    </svg>
    <svg
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="w-10 h-10"
      role="progressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="background stroke-[0.5rem] stroke-trunks/[.24]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
      <path
        class="progress stroke-[0.5rem] rtl:-scale-x-100 rtl:translate-x-full stroke-piccolo transition-[stroke-dashoffset]"
        d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
        stroke-linecap="round"
        style="stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px; fill-opacity: 0;"
      />
    </svg>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
